--- a/blogtastic/index.html
+++ b/blogtastic/index.html
@@ -1,4 +1,7 @@
 <head>
     <link rel="stylesheet" type "text/css" href="style.css">
 </head>
-<h1>Hello World!</h1>
+<body>
+	<h1>Hello World!</h1>
+	<p>Sabastian is the coolest!</p>
+</body>
